--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,7 +57,7 @@ button {
 <body>
 
 <div class="card">
-  <h1>💖 gio love , will you be my Valentine? 💘</h1>
+  <h1>💖 Gio Love, will you be my Valentine? 💘</h1>
   <button class="yes" onclick="yesClick()">Yes ❤️</button>
   <button class="no" id="noBtn">No 😜</button>
 </div>
@@ -76,7 +77,6 @@ function randomMove() {
   noBtn.style.top = y + "px";
 }
 
-// No button keeps moving
 setInterval(randomMove, 700);
 
 function yesClick() {
@@ -92,9 +92,9 @@ function yesClick() {
     text-align:center;
     padding:20px;
   ">
-    <h1>🥰 Yayyy Gio! I knew it 😍💖</h1>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyaWJ1cnFzeW5tdGljNWNhMGlqMmxtcGx1Z3V2M2w2MnRzOXNvd21oYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriO0OEd9QIDdllqo/giphy.gif
-         alt="Dancing girl"
+    <h1>🥰 Yayyy Gio Love! I knew it 😍💖</h1>
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyaWJ1cnFzeW5tdGljNWNhMGlqMmxtcGx1Z3V2M2w2MnRzOXNvd21oYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriO0OEd9QIDdllqo/giphy.gif"
+         alt="Gif"
          style="width:250px; margin-top:20px; border-radius:20px;">
   </div>
   `;
