--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ function yesClick() {
     padding:20px;
   ">
     <h1>🥰 Yayyy Gio Love! I knew it 😍💖</h1>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyaWJ1cnFzeW5tdGljNWNhMGlqMmxtcGx1Z3V2M2w2MnRzOXNvd21oYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriO0OEd9QIDdllqo/giphy.gif"
+    <img src="https://gifft.me/o/l/2rsmj01rt16pbzsfwc3bn1fs"
          alt="Gif"
          style="width:250px; margin-top:20px; border-radius:20px;">
   </div>
